--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -9,8 +9,9 @@
 {% block container %}
 <div class="container p-5 mt-3 LoginForm__container">
     <div class="LoginForm__img">
-        <img src="{%  %}" alt="">
+        <img src="{% static 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Victorinox_Logo.svg/1200px-Victorinox_Logo.svg.png' %}" alt="Logo">
     </div>
+    <h3>Login</h3>
     <form method="POST" action="">
         {% csrf_token %}
         <div class="form-group">
@@ -20,6 +21,16 @@
             name="username"
             placeholder="User Name">
             </input>
+            <label class="mb-1">Password</label>
+            <input type="password"
+            class="form-control"
+            name="password"
+            placeholder="Password">
+            </input>
+        </div>
+        <button class="btn btn-success mx-auto mt-5 d-block px-4" type="button">Login</button>
+        <div class="d-flex flex-column mt-4 form-footer">
+            <p class="m-auto">You don't have an account, <a href="{% url 'signup' %}">Sign Up.</a></p>
         </div>
     </form>
 </div>
