--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,10 +1,10 @@
-{%{% extends '../base.html' %}%}
+{% extends '../base.html' %}
 {% block head_content%}
     <title>
     Login
     </title>
 {%endblock head_content%}
-{%load static%}
+{% load static %}
 
 {% block container %}
 <div class="container p-5 mt-3 LoginForm__container">
@@ -12,8 +12,10 @@
         <img src="{% static 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Victorinox_Logo.svg/1200px-Victorinox_Logo.svg.png' %}" alt="Logo">
     </div>
     <h3>Login</h3>
-    <form method="POST" action="">
+    <form method="POST" action="{% url 'login' %}">
         {% csrf_token %}
+        {% include "partials/_messages.html" %}
+
         <div class="form-group">
             <label class="mb-1">User Name</label>
             <input type="text"
@@ -28,7 +30,7 @@
             placeholder="Password">
             </input>
         </div>
-        <button class="btn btn-success mx-auto mt-5 d-block px-4" type="button">Login</button>
+        <button class="btn btn-success mx-auto mt-5 d-block px-4" type="submit">Login</button>
         <div class="d-flex flex-column mt-4 form-footer">
             <p class="m-auto">You don't have an account, <a href="{% url 'signup' %}">Sign Up.</a></p>
         </div>
