--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -14,6 +14,8 @@
     <h3>Create a new account</h3>
     <form method="POST" action="">
         {% csrf_token %}
+        {% include "partials/_messages.html" %}
+        
         <div class="form-group">
             <label class="mb-1">User Name</label>
             <input type="text"
